--- a/assets/style.css
+++ b/assets/style.css
@@ -9,9 +9,9 @@
 
 
 body {
-  background-color: rgba(45, 45, 44, 0.41);
+  background-color: #004061;
   /*background-image: url("banner.jpg");*/
-  font-family: "Open Sans", verdana, arial, sans-serif;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
 .top_bar {
@@ -21,7 +21,7 @@ body {
   margin-right: 200px;
   height: 30%;
   width: 100%;
-  color:rgb(7, 7, 7);
+  color: #DAA520;
 }
 .image_spot{
   width: 70%;
@@ -40,24 +40,30 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: rgba(28, 53, 117, 0.56);
+  color: #FFFFFF;
+  font-size: 14px;
   padding-left: 1%;
 }
 
-h1 {
-  color: #0d0e0a;
-  font-family: ui-monospace;
-  text-align: center ;
-}
 
 h3 {
   margin-block-start:0.3em;
-  font-size: smaller;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  font-size: 14px;
+  color: #000000;
+  font-weight: normal;
+  font-style: normal;
+  font-variant: normal;
+  font-style: italic;
+  font-weight:90;
 }
 
 h4 {
-  margin-block-end:0.3em;
-  font-size: smaller;
+  color: #004061;
+  text-transform: uppercase;
+  font-size: 14px;
+  margin-block-end:0.3em
+  font-weight:50;
 }
 
 .text{
@@ -68,20 +74,27 @@ h4 {
 
 .row{
   display: flex;
+  color: #00334D;
+}
+
+.ext_row{
+  display: flex;
+  font-size: 14px;
+  color: #FFFFFF;
 }
 
 /* Boxes */
 
 .box {
-  border-radius: 20px;
-  background-color: #F9F9F8;
+  border-radius: 5px;
+  background-color: #FFFFFF;
   margin: 10px;
   padding: 10px;
   box-shadow: 2px 2px 2px lightgrey;
 }
 
 .box_comment {
-  border-radius: 20px;
+  border-radius: 50px;
   background-color: #d4f5c29a;
   margin: 10px;
   padding: 10px;
@@ -91,14 +104,16 @@ h4 {
   font-family: system-ui;
 }
 
-.box_emissions {
-  border-radius: 20px;
-  background-color: rgba(28, 53, 117, 0.56);
+.box_curiosities {
+  border-radius: 8px;
+  border: 5px groove rgba(28,110,164,0.95);
+  background-color: #E6F2FF;
   margin: 2px;
+  padding: 8px;
+  position: relative;
   box-shadow: 2px 2px 2px lightgrey;
-  width: 50%;
-  text-align: center;
-}
+ }
+
 
 /* Radio buttons */
 .radio {
@@ -116,12 +131,12 @@ h4 {
 
 .radio label {
   display: table-caption;
-  background-color: rgb(248, 249, 249);
+  background-color: #004061;
   padding: 20px 20px;
-  font-size: 16px;
+  font-size: 20px;
   border-radius: 50%;
   text-align: center;
-  border: 3px solid rgba(28, 53, 117, 0.56);
+  border: 4px solid #E6F2FF;
   height: 20px;
   width: 20px;
 
